# clove-lang

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.ja.md  README.md  SECURITY.md  clovefmt.toml
crates/clove-core/: Cargo.toml
crates/clove-core/assets/: clove_dag.clv  clove_set.clv  clove_std.clv  default-user.clv
crates/clove-core/benches/: map_updates.rs
crates/clove-core/src/: ast.rs  compiler.rs  concurrency.rs  cow.rs  doc_examples.rs  docs.rs  dynamic_vars.rs  env.rs  error.rs  eval.rs  fmt_config.rs  fn_meta.rs  fn_type.rs  foreign.rs  form_source.rs  form_to_string.rs  formatter.rs  guard.rs  interrupt.rs  io_reader.rs  ir.rs  lib.rs  memo_support.rs  namespaces.rs  native_buf.rs  options.rs  package_registry.rs  plugin_host.rs  plugin_meta.rs  pretty_print.rs  profiler.rs  reader.rs  reader_tags.rs  repl.rs  runtime.rs  seq.rs  settings.rs  short_fn.rs  spread.rs  string_escape.rs  (+8 more)
crates/clove-core/src/builtins/: cli.rs  concurrency.rs  config.rs  core.rs  dag.rs  data.rs  duration.rs  fs.rs  functional.rs  http.rs  io.rs  json.rs  log.rs  math.rs  memo.rs  mod.rs  native.rs  path.rs  predicates.rs  process.rs  seq.rs  shared.rs  shell.rs  string.rs  term.rs  test.rs  time.rs  walk.rs  yaml.rs
crates/clove-core/src/typing/: hm.rs  infer.rs  mod.rs
crates/clove-core/src/vm/: bytecode.rs  compiler.rs  error.rs  mod.rs  profiler.rs  runtime.rs
crates/clove-core/tests/: async_scope.rs  dag_parallel.rs  debug_stash.rs  doc_examples.rs  each_run.rs  examples_run.rs  fmt_config.rs  fmt_snapshots.rs  fn_destructuring.rs  fn_meta_types.rs  formatter_roundtrip.rs  indexer_commas.rs  json_read_seq.rs  map_refs.rs  match_or.rs  mut_boundaries.rs  mut_collections.rs  native_buf.rs  nth_multi.rs  oop_syntax.rs  path_sanitize.rs  perf_complexity.rs  pp.rs  pretty_print_roundtrip.rs  reader_regex.rs  sharp_accessor.rs  spawn_task_runtime.rs  string_display_escape.rs  string_interpolation.rs  type_checks.rs  vm_basic.rs  with_redefs.rs
crates/clove-core/tests/common/: mod.rs
crates/clove-core/tests/fixtures/: fmt_all_syntax.clv  snake_state.clv  snake_state01.clv  snake_state01_formatted2.clv  snake_state_formatted.clv  snake_terminal.clv  terminal1.clv  terminal1_formatted.clv  terminal1_formatted2.clv
crates/clove-core/tests/fmt_snapshots/: alt_config.toml
crates/clove-core/tests/fmt_snapshots/cases/: fmt_002_if_multiline.clv  fmt_005_map_alignment.clv  fmt_006_let_alignment.clv  fmt_007_map_shorthand_basic.clv  fmt_010_fn_params_destructuring.clv  fmt_011_match_alignment_candidate.clv  fmt_012_cond_alignment_candidate.clv  fmt_013_trailing_comment.clv  fmt_014_dangling_comment.clv  fmt_015_map_shorthand_input_form.clv  fmt_017_strings_and_regex.clv  fmt_019_dot_chain_multiline.clv
crates/clove-core/tests/fmt_snapshots/expected/alt/: fmt_001_long_call_width.clv  fmt_002_if_multiline.clv  fmt_004_map_inline_threshold.clv  fmt_006_let_alignment.clv  fmt_010_fn_params_destructuring.clv  fmt_011_match_alignment_candidate.clv  fmt_012_cond_alignment_candidate.clv  fmt_013_trailing_comment.clv  fmt_014_dangling_comment.clv  fmt_015_map_shorthand_input_form.clv  fmt_019_dot_chain_multiline.clv
crates/clove-core/tests/fmt_snapshots/expected/default/: fmt_001_long_call_width.clv  fmt_003_vector_relaxed_inline_threshold.clv  fmt_004_map_inline_threshold.clv  fmt_005_map_alignment.clv  fmt_006_let_alignment.clv  fmt_008_map_shorthand_exclude_keys.clv  fmt_009_depth_limit_nested_calls.clv  fmt_010_fn_params_destructuring.clv  fmt_011_match_alignment_candidate.clv  fmt_012_cond_alignment_candidate.clv  fmt_013_trailing_comment.clv  fmt_014_dangling_comment.clv  fmt_015_map_shorthand_input_form.clv  fmt_016_empty_collections.clv  fmt_017_strings_and_regex.clv  fmt_018_dot_chain.clv  fmt_019_dot_chain_multiline.clv
crates/clove-lang/: Cargo.toml  build.rs
crates/clove-lang/src/: build.rs  deps.rs  doc.rs  format.rs  hm_codegen.rs  lib.rs  main.rs  native_plugins.rs  native_policy.rs  pkg.rs  plugin.rs  repl.rs  symbols.rs
crates/clove-lang/tests/: basic.rs  builtins.rs  compat.rs  debug_repl.rs  examples_smoke.rs  interop.rs  lang.rs  namespace_alignment.rs  namespaces.rs  pkg.rs  ruby_interop.rs
crates/clove-lsp/: Cargo.toml
crates/clove-lsp/src/: builtin_stubs.rs  docs.rs  document_store.rs  lsp_runtime.rs  main.rs  server.rs
crates/clove-plugin-sdk/: Cargo.toml
crates/clove-plugin-sdk-macros/: Cargo.toml
crates/clove-plugin-sdk-macros/src/: lib.rs
crates/clove-plugin-sdk/src/: lib.rs
crates/clove-python/: Cargo.toml
crates/clove-python/src/: engine.rs  lib.rs
crates/clove-ruby/: Cargo.toml
crates/clove-ruby/src/: engine.rs  lib.rs
crates/clove2-core/: Cargo.toml
crates/clove2-core/src/: aliases.rs  ast.rs  builtins.rs  codegen.rs  docs.rs  dynamic_detect.rs  error.rs  eval.rs  json_infer.rs  lib.rs  reader.rs  syntax.rs  type_check.rs  type_infer.rs  types.rs  use_directive.rs  value.rs
crates/clove2-core/src/vm/: mod.rs  profiler.rs
crates/clove2-core/tests/: codegen.rs  doc_examples.rs  docs.rs  dynamic_detect.rs  eval_builtins.rs  reader.rs  syntax.rs  syntax_coverage.rs  type_check.rs  type_infer.rs  type_infer_doc_examples.rs  type_parse.rs  use_directive.rs  vm.rs
docs/: README.ja.md  README.md  clovefmt.toml  (+14 more)
(+114 files in other folders)
