[package]
name = "clove-core"
version = "0.1.0"
edition = "2021"
description = "Clove language core (runtime, reader, builtins)"
authors = ["inakaegg <52376271+inakaegg@users.noreply.github.com>"]

[features]
default = []
repl_guard = ["libc"]
bench-rpds = ["rpds"]

[dependencies]
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json"] }
rustyline = "11.0"
thiserror = "1.0"
im = "15.1"
rpds = { version = "1.1", optional = true }
crossbeam-channel = "0.5"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
dirs-next = "2.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
toml = "0.8"
ini = "1.3"
dotenvy = "0.15"
shell-words = "1.1"
configparser = "1.0"
rand = "0.8"
crossterm = "0.27"
clove-plugin-api = { path = "../clove-plugin-api" }
libc = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "map_updates"
harness = false
