[package]
name = "clove-lang"
version = "0.1.0"
edition = "2021"
description = "CLI / language shim on top of clove-core"
authors = ["inakaegg <52376271+inakaegg@users.noreply.github.com>"]
build = "build.rs"

[features]
default = ["ruby", "python", "repl_guard"]
ruby = ["clove-ruby"]
python = ["clove-python"]
repl_guard = ["clove-core/repl_guard"]

[dependencies]
once_cell = "1.19"
clove-core = { path = "../clove-core" }
clove-ruby = { path = "../clove-ruby", optional = true }
clove-python = { path = "../clove-python", optional = true }
reedline = "0.44"
im = "15.1"
nu-ansi-term = "0.50"
signal-hook = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clove-plugin-api = { path = "../clove-plugin-api" }
dirs-next = "2.0"
sha2 = "0.10"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
libloading = "0.8"


[[bin]]
name = "clove"
path = "src/main.rs"

[[test]]
name = "ruby_interop"
path = "tests/ruby_interop.rs"
harness = false

[dev-dependencies]
tempfile = "3"
