[package]
name = "clove-lsp"
version = "0.1.0"
edition = "2021"
description = "Minimal LSP server for the Clove language"
authors = ["inakaegg <52376271+inakaegg@users.noreply.github.com>"]

[dependencies]
clove-core = { path = "../clove-core" }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
tower-lsp = "0.20"
ignore = "0.4"

[dev-dependencies]
tempfile = "3"
