[package]
name = "clove-plugin-sdk-macros"
version = "0.1.0"
edition = "2021"
description = "Proc macros for Clove plugin SDK"
authors = ["inakaegg <52376271+inakaegg@users.noreply.github.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
