[package]
name = "clove-plugin-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK helpers for Clove native plugins"
authors = ["inakaegg <52376271+inakaegg@users.noreply.github.com>"]

[dependencies]
clove-plugin-api = { path = "../clove-plugin-api" }
clove-plugin-sdk-macros = { path = "../clove-plugin-sdk-macros" }
inventory = "0.3"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
